# ServiceRobots

./: .gitignore  LICENSE  README.md
autodock/: README.md
autodock/src/rl_agent/src/: agent.cpp
autodock/src/rl_env/: CMakeLists.txt
autodock/src/rl_env/src/: env.cpp
autodock/src/rl_experiment/src/: rl.cc
autodock/src/rl_msgs/: CMakeLists.txt
navigation/: README.md
navigation/map_labelling/: CMakeLists.txt  package.xml
navigation/map_labelling/labels/: towne_levine_labels.json
navigation/map_labelling/launch/: map_labelling.launch
navigation/map_labelling/src/: gather.py  label_listener.py  label_service.py  map_search.py
navigation/map_labelling/srv/: DistanceToLocation.srv  GoToLocation.srv  LabelMap.srv  MotionStatus.srv  NearestLocation.srv
navigation/robust_controller/: CMakeLists.txt  package.xml
navigation/robust_controller/action/: RobustController.action
navigation/robust_controller/launch/: robust_controller.launch
navigation/robust_controller/src/: controller_test.py  move_base_states.py  robust_controller_node.py  smach_test.py  util.py
navigation/robust_navigation/: CMakeLists.txt  package.xml
navigation/robust_navigation/UpdatedTurtlebotFiles/: turtlebot_library.urdf.xacro
navigation/robust_navigation/launch/: amcl.launch  autonomous_mapping.launch  basic_mapping.launch  cartographer.launch  lidar.launch  map_navigation.launch  move_base.launch  torture_test.launch  view_mapping.launch  view_navigation.launch
navigation/robust_navigation/maps/: levine_4th_good.pgm  levine_4th_good.yaml  levine_6th.pgm  levine_6th.yaml  towne_levine.pgm  towne_levine.yaml  towne_levine_full2.yaml  towne_levine_full2_edited.yaml  towne_levine_full2_heavily_edited.yaml
navigation/robust_navigation/maps/old/: GraspTest.pgm  GraspTest.yaml  TestMap.pgm  TestMap.yaml  TowneTest.pgm  TowneTest.yaml  cart_test.pgm  cart_test.yaml  cart_test2.pgm  cart_test2.yaml  grasp_first_half.pgm  grasp_first_half.yaml  grasp_second_half.pgm  grasp_second_half.yaml  levine_4th_10_29.pgm  levine_4th_10_29.yaml  levine_4th_11_14.pgm  levine_4th_11_14.yaml  levine_4th_bad.pb  levine_4th_bad.pgm  levine_4th_bad.yaml  levine_4th_cart_good.pb  levine_4th_cart_good.pgm  levine_4th_cart_good.yaml  levine_4th_test.pgm  levine_4th_test.yaml  levine_cart.pb  levine_cart.pgm  levine_cart.yaml  map_grasp.pgm  map_grasp.yaml  played_back_map.pgm  played_back_map.yaml
navigation/robust_navigation/param/: cartographer_params.lua  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
navigation/robust_navigation/rviz/: demo_turtlebot.rviz  navigation.rviz
navigation/robust_navigation/src/: torture_test_controller.py
(+17 files in other folders)
