<?xml version="1.0"?>
<package>
  <name>robust_navigation</name>
  <version>0.1.0</version>
  <description>A robust navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="servicerobot1@todo.todo">servicerobot1</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cis700navigation</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--Needed for core mapping, localization, and navigation -->
  <run_depend>amcl</run_depend>
  <run_depend>cartographer_ros</run_depend>
  <run_depend>cartographer_turtlebot</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  
  <!-- needed for autonomous mapping -->
  <run_depend>hector_navigation</run_depend>
  <run_depend>hector_slam</run_depend>
  
  <!--Needed for map labelling and robust controller -->
  <run_depend>robust_controller</run_depend>
  <run_depend>map_labelling</run_depend>
  
  <!--Needed to run hokuyo lidar -->
  <run_depend>hokuyo_node</run_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
